# clanker-mvp

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  audit_log.py  devin_client.py  dispatcher.py  email_processor.py  gatekeeper.py  gmail_client.py  negotiator.py  pyproject.toml  server.py  task_store.py
